# SDEV-300-building-Secure-Python-Applications

./: README.md  pyproject.toml
disc_1/: discussion_1.py
lab_1/: voter_registration.py
lab_2/: menu.py
lab_4/: password_excercise.py
lab_6/templates/: base.html  resume.html  welcome.html
lab_7/: __init__.py  lab_pylint.txt  run.py
lab_7/portfolio/: __init__.py  auth.py  routes.py
lab_7/portfolio/static/: styles.css
lab_7/portfolio/templates/: base.html
lab_7/portfolio/templates/auth/: auth_form.html  login.html
lab_7/portfolio/templates/routes/: about.html  resume.html
lab_8/: lab_pylint.txt  run.py
lab_8/portfolio/: auth.py
lab_8/portfolio/templates/: base.html
lab_8/portfolio/templates/routes/: landing.html
sdev_300/disc_1/: discussion_1_lint_1.txt  discussion_1_lint_2.txt
sdev_300/disc_2/: discussion_2.py
sdev_300/disc_3/: bandit_results.txt
sdev_300/lab_2/: menu.py
sdev_300/lab_3/: state_data.py
sdev_300/lab_4/: matrix_app.py
sdev_300/lab_5/: bandit_results.txt  data_analysis.py
sdev_300/lab_6/: portfolio.py
sdev_300/lab_6/static/: styles.css
sdev_300/lab_6/templates/: about.html  contact.html
