[tool.poetry]
name = "sdev-300"
version = "0.1.0"
description = ""
authors = ["TRJackson998 <t.r.jackson998@gmail.com>"]
readme = "README.md"
packages = [{include = "sdev_300"}]

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
