[tool.poetry]
name = "sdev-300"
version = "0.1.0"
description = "A class taken in 2024 at UMGC."
authors = ["TRJackson998 <85368064+TRJackson998@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
